--- a/visitante.html
+++ b/visitante.html
@@ -431,7 +431,7 @@
                 return true;
             } catch (err) {
                 showError('Permissão de câmera/microfone negada.');
-                return false;
+                return true;
             }
         }
 
