--- a/visitante.html
+++ b/visitante.html
@@ -276,7 +276,7 @@
 <body>
     <div class="container">
         <div class="status-card">
-            <h1>DOORVI</h1>
+            <h1>NEGRET'S</h1>
             
             <div id="startScreen">
                 <div class="resident-info">
@@ -286,30 +286,9 @@
 
                 <div class="form-group">
                     <label for="visitorNameInput">Seu nome:</label>
-                    <input type="text" id="visitorNameInput" class="visitor-name-input" placeholder="Ex: João" maxlength="30">
+                    <input type="text" id="visitorNameInput" class="visitor-name-input" placeholder="Ex: Elias" maxlength="30">
                 </div>
 
-                <div class="form-group">
-                    <label for="deliveryType">Motivo da visita:</label>
-                    <div class="delivery-options">
-                        <label class="delivery-option">
-                            <input type="radio" name="deliveryType" value="Pessoal" checked>
-                            <span class="radio-custom"></span>
-                            <i class="fas fa-user"></i> Pessoal
-                        </label>
-                        <label class="delivery-option">
-                            <input type="radio" name="deliveryType" value="Mercado Livre">
-                                <span class="radio-custom"></span>
-                                <i class="fas fa-truck"></i> Mercado Livre
-                            </label>
-                        <label class="delivery-option">
-                            <input type="radio" name="deliveryType" value="Shopee">
-                                <span class="radio-custom"></span>
-                                <i class="fas fa-shopping-bag"></i> Shopee
-                            </label>
-                        </div>
-                    </div>
-                </div>
 
                 <button class="btn btn-call" id="callBtn">
                     <i class="fas fa-video"></i>
